# ROS2-HAL-Xsens-MTi-620

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
hal_xsens_mti_620/: hal_xsens_mti_620.py
include/hal_xsens_mti_620/: xdacallback.hpp  xsens_mti620.hpp
launch/: hal_xsens_mti_620.launch.py
params/: params.yaml
resource/: hal_xsens_mti_620
src/: xdacallback.cpp  xsens_mti620.cpp
